<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/contentParent"
        android:paddingTop="21dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/primaryTextColor"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_price"/>
        <EditText
            android:textColor="@color/primaryTextColor"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/price"
            android:textSize="32sp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/valueHint"/>

        <lib.kingja.switchbutton.SwitchMultiButton
            android:id="@+id/splitway"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            app:selectedColor="#eb7b00"
            app:selectedTab="0"
            app:strokeRadius="5dp"
            app:strokeWidth="1dp"
            app:switchTabs="@array/switch_tabs"
            app:textSize="14sp" />
        <Button
            android:id="@+id/add"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/secondaryTextColor"
            android:drawableTint="@color/secondaryTextColor"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/add"
            android:drawableStart="@drawable/ic_plus"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_deletebutton"/>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textSize="18sp"
                android:id="@+id/resetBtn"
                android:layout_marginStart="7dp"
                android:textColor="@color/secondaryTextColor"
                android:drawableTint="@color/secondaryTextColor"
                android:backgroundTint="@color/secondaryColor"
                android:background="@drawable/btn_hallow"
                android:text="@string/deleteProcess"
                android:drawableStart="@drawable/ic_deletebutton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_deletebutton"
                android:layout_marginLeft="7dp" />
            <com.travijuu.numberpicker.library.NumberPicker
                android:layout_weight="1.5"
                app:value="3"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/numOfPeople"/>
            <Button
                android:textSize="18sp"
                android:id="@+id/undoBtn"
                android:layout_marginEnd="7dp"
                android:textColor="@color/secondaryTextColor"
                android:drawableTint="@color/secondaryTextColor"
                android:backgroundTint="@color/secondaryColor"
                android:background="@drawable/btn_hallow"
                android:text="@string/undo"
                android:drawableStart="@drawable/ic_undo_black_24dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_undo_black_24dp"
                android:layout_marginRight="7dp" />

        </LinearLayout>
        <TextView
            android:layout_marginTop="8dp"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_gravity="center"
            android:text="@string/billTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="42sp"
            android:layout_gravity="center"
            android:text="0"
            android:id="@+id/totalprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:background="@color/secondaryColor" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textSize="18sp"
                android:id="@+id/checkAll"
                android:textColor="@color/secondaryTextColor"
                android:drawableTint="@color/secondaryTextColor"
                android:backgroundTint="@color/secondaryColor"
                android:text="@string/check_all"
                android:drawableStart="@drawable/ic_001_correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_undo_black_24dp"/>
            <Button
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:id="@+id/UncheckAll"
                android:textColor="@color/secondaryTextColor"
                android:drawableTint="@color/secondaryTextColor"
                android:backgroundTint="@color/secondaryColor"
                android:text="@string/uncheck_all"
                android:drawableStart="@drawable/ic_002_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_002_cancel"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
        <com.alquaid.BillSplitter.MyGridView
            android:clipToPadding="false"
            android:paddingBottom="10dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:id="@+id/gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnWidth="120dp"
            android:layout_gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="auto_fit"
            android:verticalSpacing="10dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>
</RelativeLayout>